[gd_scene load_steps=12 format=3 uid="uid://cb1sfp7hdowla"]

[ext_resource type="Script" uid="uid://dxts6681cxjle" path="res://scripts/Game_level_4.gd" id="1_qbsmt"]
[ext_resource type="PackedScene" uid="uid://cqtbisskdn4xt" path="res://scenes/spawner.tscn" id="2_cpr0p"]
[ext_resource type="Texture2D" uid="uid://xon1i8gor1n7" path="res://assets/bg/Woll_4_1.png" id="2_j31ne"]
[ext_resource type="Texture2D" uid="uid://s4d4ycokrgaw" path="res://assets/bg/Woll_4_2.png" id="3_2cwu1"]
[ext_resource type="Texture2D" uid="uid://c86drfrqf7ods" path="res://assets/bg/bg_lvl_4.png" id="5_j31ne"]
[ext_resource type="Script" uid="uid://44v48o6mvmuv" path="res://ui/GameOverPanel.gd" id="6_gameover"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiw3p"]
size = Vector2(35.1983, 65.5956)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_400sg"]
size = Vector2(18.0916, 32.4814)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(720, 132)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(1, 0.8, 0.4, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 0.6, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[node name="Game3" type="Node2D"]
script = ExtResource("1_qbsmt")
level_number = 4

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(649.993, 1037.44)
rotation = 3.14159
scale = Vector2(3.29519, -5.8066)
shape = SubResource("RectangleShape2D_kiw3p")

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
position = Vector2(655, 988)
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_j31ne")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(74.5001, 1051.21)
scale = Vector2(7.13036, -5.9857)
shape = SubResource("RectangleShape2D_400sg")

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
position = Vector2(72, 1005)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_2cwu1")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(360, 1214)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="Spawner" parent="." instance=ExtResource("2_cpr0p")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverPanel" type="Control" parent="UI/UIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_gameover")

[node name="Background" type="ColorRect" parent="UI/UIRoot/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="VBoxContainer" parent="UI/UIRoot/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/UIRoot/GameOverPanel/MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 32
text = "Игра окончена!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/UIRoot/GameOverPanel/MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 24
text = "Счёт: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelButton" type="Button" parent="UI/UIRoot/GameOverPanel/MainContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Следующий уровень"

[node name="MenuButton" type="Button" parent="UI/UIRoot/GameOverPanel/MainContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Меню"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)
limit_left = 0
limit_top = -100000
limit_right = 720
limit_bottom = 1280
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(337, 575)
texture = ExtResource("5_j31ne")

[node name="YandexSDK" type="Node" parent="."]

[connection signal="pressed" from="UI/UIRoot/GameOverPanel/MainContainer/NextLevelButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="UI/UIRoot/GameOverPanel/MainContainer/MenuButton" to="." method="_on_restart_pressed"]
